--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -14,6 +14,9 @@ http {
 	# Basic Settings
 	##
 
+	client_max_body_size 100M;
+    client_body_timeout 120;
+
     # Rewrite client IP to X-Forwarded-For
     real_ip_header X-Forwarded-For;
     set_real_ip_from 0.0.0.0/0;
